# proteus

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt  setup.py
helpful/docs/: TESTING.md  api_integration.md  batch_processing.md  database_management.md  distributed_inference.md  ensemble.md  model_interface.md  model_versioning.md  quantization.md  statistical_analysis.md  visualization.md
helpful/examples/: api_integration.py  basic_prediction.py  batch_processing.py  distributed_inference.py  ensemble_prediction.py  model_versioning.py  quantization.py  structure_comparison.py  visualization_examples.py
helpful/tests/: __init__.py  conftest.py  test_suite.py
helpful/tests/core/: __init__.py  test_core.py  test_database_manager.py  test_doc_automation.py  test_file_processing.py  test_logging_config.py  test_pdb_encoder.py  test_quantization.py
helpful/tests/models/: __init__.py  test_api_integration.py  test_colabfold_interface.py  test_ensemble.py  test_ensemble_and_versioning.py  test_model_caching.py  test_model_interface.py  test_model_versioning.py  test_model_versioning_and_caching.py
helpful/tests/performance/: __init__.py  test_batch_processing.py  test_batch_processor.py  test_benchmarking.py  test_distributed_inference.py  test_memory_management.py
helpful/tests/structure/: __init__.py  test_advanced_visualization.py  test_plotting.py  test_structure_comparison.py  test_visualization.py
src/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
src/analysis/: __init__.py
src/core/: __init__.py
src/interfaces/: __init__.py  alphafold_interface.py  api_manager.py  base_interface.py  colabfold_interface.py  esm_interface.py  generic_interface.py  model_interface.py  openfold_interface.py  rosettafold_interface.py
(+42 files in other folders)
